grammar/.antlr/CompiladorGVParser.java
// Generated from c:/Users/vinycius yuji/OneDrive/Documentos/faculdade/Compiladores/compiladorGV/grammar/CompiladorGV.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CompiladorGVParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LEIA=1, ESCREVA=2, SE=3, SENAO=4, PARA=5, ENQUANTO=6, RETORNA=7, TIPO_INT=8, 
		TIPO_STRING=9, ABRE_PAR=10, FECHA_PAR=11, ABRE_CHAVE=12, FECHA_CHAVE=13, 
		VIRGULA=14, FINAL=15, RECEBE=16, INCREMENTO=17, DECREMENTO=18, PLUS=19, 
		MINUS=20, MULT=21, DIV=22, IGUAL_EXATO=23, DIFERENTE=24, MAIOR_Q=25, MENOR_Q=26, 
		MENOR_IGUAL_Q=27, MAIOR_IGUAL_Q=28, AND=29, OR=30, NOT=31, STRING=32, 
		INTEIRO=33, FLOAT=34, ID=35, WS=36, ERRO=37;
	public static final int
		RULE_inicio = 0, RULE_comandos = 1, RULE_comando_declaracao_funcao = 2, 
		RULE_comando_chamada_funcao = 3, RULE_parametros = 4, RULE_parametro = 5, 
		RULE_argumentos = 6, RULE_comando_retorno = 7, RULE_comando_ler = 8, RULE_comando_escrever = 9, 
		RULE_comando_se = 10, RULE_comando_para = 11, RULE_comando_enquanto = 12, 
		RULE_comando_atribuicao = 13, RULE_comando_declaracao = 14, RULE_atribuicao = 15, 
		RULE_incremento = 16, RULE_condicao = 17, RULE_operador = 18, RULE_lista_argumentos = 19, 
		RULE_expressao = 20, RULE_bloco = 21, RULE_bloco_funcao = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "comandos", "comando_declaracao_funcao", "comando_chamada_funcao", 
			"parametros", "parametro", "argumentos", "comando_retorno", "comando_ler", 
			"comando_escrever", "comando_se", "comando_para", "comando_enquanto", 
			"comando_atribuicao", "comando_declaracao", "atribuicao", "incremento", 
			"condicao", "operador", "lista_argumentos", "expressao", "bloco", "bloco_funcao"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'leia'", "'escreva'", "'se'", "'senao'", "'para'", "'enquanto'", 
			"'retorna'", "'int'", "'string'", "'('", "')'", "'{'", "'}'", "','", 
			"';'", "'='", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'=='", "'!='", 
			"'>'", "'<'", "'<='", "'>='", "'&&'", "'||'", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LEIA", "ESCREVA", "SE", "SENAO", "PARA", "ENQUANTO", "RETORNA", 
			"TIPO_INT", "TIPO_STRING", "ABRE_PAR", "FECHA_PAR", "ABRE_CHAVE", "FECHA_CHAVE", 
			"VIRGULA", "FINAL", "RECEBE", "INCREMENTO", "DECREMENTO", "PLUS", "MINUS", 
			"MULT", "DIV", "IGUAL_EXATO", "DIFERENTE", "MAIOR_Q", "MENOR_Q", "MENOR_IGUAL_Q", 
			"MAIOR_IGUAL_Q", "AND", "OR", "NOT", "STRING", "INTEIRO", "FLOAT", "ID", 
			"WS", "ERRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CompiladorGV.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CompiladorGVParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public List<ComandosContext> comandos() {
			return getRuleContexts(ComandosContext.class);
		}
		public ComandosContext comandos(int i) {
			return getRuleContext(ComandosContext.class,i);
		}
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterInicio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitInicio(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(46);
				comandos();
				}
				}
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 34359739374L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandosContext extends ParserRuleContext {
		public Comando_declaracao_funcaoContext comando_declaracao_funcao() {
			return getRuleContext(Comando_declaracao_funcaoContext.class,0);
		}
		public Comando_chamada_funcaoContext comando_chamada_funcao() {
			return getRuleContext(Comando_chamada_funcaoContext.class,0);
		}
		public Comando_retornoContext comando_retorno() {
			return getRuleContext(Comando_retornoContext.class,0);
		}
		public Comando_lerContext comando_ler() {
			return getRuleContext(Comando_lerContext.class,0);
		}
		public Comando_escreverContext comando_escrever() {
			return getRuleContext(Comando_escreverContext.class,0);
		}
		public Comando_seContext comando_se() {
			return getRuleContext(Comando_seContext.class,0);
		}
		public Comando_paraContext comando_para() {
			return getRuleContext(Comando_paraContext.class,0);
		}
		public Comando_enquantoContext comando_enquanto() {
			return getRuleContext(Comando_enquantoContext.class,0);
		}
		public Comando_atribuicaoContext comando_atribuicao() {
			return getRuleContext(Comando_atribuicaoContext.class,0);
		}
		public Comando_declaracaoContext comando_declaracao() {
			return getRuleContext(Comando_declaracaoContext.class,0);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitComandos(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comandos);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				comando_declaracao_funcao();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				comando_chamada_funcao();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				comando_retorno();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(54);
				comando_ler();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				comando_escrever();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(56);
				comando_se();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(57);
				comando_para();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(58);
				comando_enquanto();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(59);
				comando_atribuicao();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(60);
				comando_declaracao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comando_declaracao_funcaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompiladorGVParser.ID, 0); }
		public TerminalNode ABRE_PAR() { return getToken(CompiladorGVParser.ABRE_PAR, 0); }
		public TerminalNode FECHA_PAR() { return getToken(CompiladorGVParser.FECHA_PAR, 0); }
		public Bloco_funcaoContext bloco_funcao() {
			return getRuleContext(Bloco_funcaoContext.class,0);
		}
		public TerminalNode TIPO_INT() { return getToken(CompiladorGVParser.TIPO_INT, 0); }
		public TerminalNode TIPO_STRING() { return getToken(CompiladorGVParser.TIPO_STRING, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public Comando_declaracao_funcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_declaracao_funcao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterComando_declaracao_funcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitComando_declaracao_funcao(this);
		}
	}

	public final Comando_declaracao_funcaoContext comando_declaracao_funcao() throws RecognitionException {
		Comando_declaracao_funcaoContext _localctx = new Comando_declaracao_funcaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comando_declaracao_funcao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_la = _input.LA(1);
			if ( !(_la==TIPO_INT || _la==TIPO_STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(64);
			match(ID);
			setState(65);
			match(ABRE_PAR);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TIPO_INT || _la==TIPO_STRING) {
				{
				setState(66);
				parametros();
				}
			}

			setState(69);
			match(FECHA_PAR);
			setState(70);
			bloco_funcao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comando_chamada_funcaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompiladorGVParser.ID, 0); }
		public TerminalNode ABRE_PAR() { return getToken(CompiladorGVParser.ABRE_PAR, 0); }
		public TerminalNode FECHA_PAR() { return getToken(CompiladorGVParser.FECHA_PAR, 0); }
		public TerminalNode FINAL() { return getToken(CompiladorGVParser.FINAL, 0); }
		public ArgumentosContext argumentos() {
			return getRuleContext(ArgumentosContext.class,0);
		}
		public Comando_chamada_funcaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_chamada_funcao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterComando_chamada_funcao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitComando_chamada_funcao(this);
		}
	}

	public final Comando_chamada_funcaoContext comando_chamada_funcao() throws RecognitionException {
		Comando_chamada_funcaoContext _localctx = new Comando_chamada_funcaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comando_chamada_funcao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(ID);
			setState(73);
			match(ABRE_PAR);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 64424510464L) != 0)) {
				{
				setState(74);
				argumentos();
				}
			}

			setState(77);
			match(FECHA_PAR);
			setState(78);
			match(FINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(CompiladorGVParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(CompiladorGVParser.VIRGULA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			parametro();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(81);
				match(VIRGULA);
				setState(82);
				parametro();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompiladorGVParser.ID, 0); }
		public TerminalNode TIPO_INT() { return getToken(CompiladorGVParser.TIPO_INT, 0); }
		public TerminalNode TIPO_STRING() { return getToken(CompiladorGVParser.TIPO_STRING, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parametro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_la = _input.LA(1);
			if ( !(_la==TIPO_INT || _la==TIPO_STRING) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(89);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentosContext extends ParserRuleContext {
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(CompiladorGVParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(CompiladorGVParser.VIRGULA, i);
		}
		public ArgumentosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterArgumentos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitArgumentos(this);
		}
	}

	public final ArgumentosContext argumentos() throws RecognitionException {
		ArgumentosContext _localctx = new ArgumentosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argumentos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			expressao(0);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIRGULA) {
				{
				{
				setState(92);
				match(VIRGULA);
				setState(93);
				expressao(0);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comando_retornoContext extends ParserRuleContext {
		public TerminalNode RETORNA() { return getToken(CompiladorGVParser.RETORNA, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode FINAL() { return getToken(CompiladorGVParser.FINAL, 0); }
		public Comando_retornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_retorno; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterComando_retorno(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitComando_retorno(this);
		}
	}

	public final Comando_retornoContext comando_retorno() throws RecognitionException {
		Comando_retornoContext _localctx = new Comando_retornoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comando_retorno);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(RETORNA);
			setState(100);
			expressao(0);
			setState(101);
			match(FINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comando_lerContext extends ParserRuleContext {
		public TerminalNode LEIA() { return getToken(CompiladorGVParser.LEIA, 0); }
		public TerminalNode ABRE_PAR() { return getToken(CompiladorGVParser.ABRE_PAR, 0); }
		public TerminalNode ID() { return getToken(CompiladorGVParser.ID, 0); }
		public TerminalNode FECHA_PAR() { return getToken(CompiladorGVParser.FECHA_PAR, 0); }
		public TerminalNode FINAL() { return getToken(CompiladorGVParser.FINAL, 0); }
		public Comando_lerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_ler; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterComando_ler(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitComando_ler(this);
		}
	}

	public final Comando_lerContext comando_ler() throws RecognitionException {
		Comando_lerContext _localctx = new Comando_lerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comando_ler);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(LEIA);
			setState(104);
			match(ABRE_PAR);
			setState(105);
			match(ID);
			setState(106);
			match(FECHA_PAR);
			setState(107);
			match(FINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comando_escreverContext extends ParserRuleContext {
		public TerminalNode ESCREVA() { return getToken(CompiladorGVParser.ESCREVA, 0); }
		public TerminalNode ABRE_PAR() { return getToken(CompiladorGVParser.ABRE_PAR, 0); }
		public TerminalNode FECHA_PAR() { return getToken(CompiladorGVParser.FECHA_PAR, 0); }
		public TerminalNode FINAL() { return getToken(CompiladorGVParser.FINAL, 0); }
		public TerminalNode STRING() { return getToken(CompiladorGVParser.STRING, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public Comando_escreverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_escrever; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterComando_escrever(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitComando_escrever(this);
		}
	}

	public final Comando_escreverContext comando_escrever() throws RecognitionException {
		Comando_escreverContext _localctx = new Comando_escreverContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comando_escrever);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ESCREVA);
			setState(110);
			match(ABRE_PAR);
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(111);
				match(STRING);
				}
				break;
			case 2:
				{
				setState(112);
				expressao(0);
				}
				break;
			}
			setState(115);
			match(FECHA_PAR);
			setState(116);
			match(FINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comando_seContext extends ParserRuleContext {
		public TerminalNode SE() { return getToken(CompiladorGVParser.SE, 0); }
		public TerminalNode ABRE_PAR() { return getToken(CompiladorGVParser.ABRE_PAR, 0); }
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public TerminalNode FECHA_PAR() { return getToken(CompiladorGVParser.FECHA_PAR, 0); }
		public List<BlocoContext> bloco() {
			return getRuleContexts(BlocoContext.class);
		}
		public BlocoContext bloco(int i) {
			return getRuleContext(BlocoContext.class,i);
		}
		public TerminalNode SENAO() { return getToken(CompiladorGVParser.SENAO, 0); }
		public Comando_seContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_se; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterComando_se(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitComando_se(this);
		}
	}

	public final Comando_seContext comando_se() throws RecognitionException {
		Comando_seContext _localctx = new Comando_seContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_comando_se);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(SE);
			setState(119);
			match(ABRE_PAR);
			setState(120);
			condicao(0);
			setState(121);
			match(FECHA_PAR);
			setState(122);
			bloco();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SENAO) {
				{
				setState(123);
				match(SENAO);
				setState(124);
				bloco();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Comando_paraContext extends ParserRuleContext {
		public TerminalNode PARA() { return getToken(CompiladorGVParser.PARA, 0); }
		public TerminalNode ABRE_PAR() { return getToken(CompiladorGVParser.ABRE_PAR, 0); }
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public List<TerminalNode> FINAL() { return getTokens(CompiladorGVParser.FINAL); }
		public TerminalNode FINAL(int i) {
			return getToken(CompiladorGVParser.FINAL, i);
		}
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public IncrementoContext incremento() {
			return getRuleContext(IncrementoContext.class,0);
		}
		public TerminalNode FECHA_PAR() { return getToken(CompiladorGVParser.FECHA_PAR, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public Comando_paraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).enterComando_para(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiladorGVListener ) ((CompiladorGVListener)listener).exitComando_para(this);
		}
	}
